Links das notícias trocados para apontar para as traduções e imagens cadastradas no sistema

--- a/_noticias/2019-03-07-pobre-11-anos.md
+++ b/_noticias/2019-03-07-pobre-11-anos.md
@@ -5,7 +5,7 @@ slug: "pobre-11-anos"
 author: "Mr.Fox"
 comments: true
 ---
-![](//web.archive.org/web/20200928103531im_/http://www.romhackers.org/imagens/outros/POBRE_11_ano.jpg)
+![](//img.romhackers.org/outros/POBRE_11_ano.jpg)
 
 Boa noite, meus caros (e minhas caras) visitantes. Antes de mais nada, eu gostaria de pedir desculpas por esta postagem atrasada. Eu pretendia postar esta notícia no dia primeiro de março, como é de costume em todos os aniversários do **PO.B.R.E.** (que não caem em ano bissexto), mas desde quinta-feira passada que eu não ando muito bem de saúde, por conta disso não foi possível postar a notícia na data prevista. Bem, com ou sem atraso, é com um imenso prazer e satisfação que venho comunicar que o **PO.B.R.E.** completa mais um ano no ar. No dia primeiro de março, fez exatos 11 anos que o **PO.B.R.E.** iniciou as suas atividades. Apesar desse recente período de inatividade aqui no site, nós ainda não desistimos e continuamos *alive and kicking*. Aproveito a oportunidade para informar que o motivo do site ter ficado cerca de uma semana fora do ar foi devido a um problema relacionado à migração do site para outro servidor e o redirecionamento do domínio para esse novo servidor. Mas felizmente já está tudo resolvido, e o site voltou a funcionar normalmente.
 
@@ -15,125 +15,125 @@ Sem mais delongas, vamos aos lançamentos:
 
 Em primeiro lugar, eu gostaria de anunciar o lançamento de uma tradução que eu sempre quis fazer: **James Bond Jr.** (sistema Nintendo 8 bits). Por muitos anos, eu estudei essa ROM, mas nunca conseguia encontrar os (*maledettos*) textos dos diálogos. Somente ano passado, eu (finalmente) descobri que os (*maledettos*) textos estavam codificados em um formato não muito convencional (tabela de 5 bits), o que impossibilitava a sua visualização em qualquer editor hexadecimal ou ferramenta similar (que exibem os dados em formato de múltiplos de 8 bits). Após essa descoberta e graças à ajuda de **denim**, que me ensinou a lógica de como funcionava a codificação em 5 bits, eu finalmente pude iniciar e concluir esse projeto com sucesso. Sendo assim, eu gostaria de agradecer a **denim** por sua grande ajuda.
 
-![](//web.archive.org/web/20200928103531im_/http://www.romhackers.org/imagens/traducoes/[NES]%20James%20Bond%20Jr%20-%20POBRE%20-%201.png) ![](//web.archive.org/web/20200928103531im_/http://www.romhackers.org/imagens/traducoes/[NES]%20James%20Bond%20Jr%20-%20POBRE%20-%202.png)\
+![](//img.romhackers.org/traducoes/[NES]%20James%20Bond%20Jr%20-%20POBRE%20-%201.png) ![](//img.romhackers.org/traducoes/[NES]%20James%20Bond%20Jr%20-%20POBRE%20-%202.png)\
 *James Bond Jr. traduzido por Mr.Fox*
 
 OBS: O pacote de tradução contém, além do *patch* de tradução, um *patch* bônus que aumenta o brilho da imagem do jogo, deixando a exibição dos gráficos mais nítida.
 
 Segue o link para o download da tradução:
 
--   [Tradução versão 1.0 do jogo James Bond Jr.](//web.archive.org/web/20200928103531/http://romhackers.org/modules/PDdownloads/singlefile.php?cid=22&lid=1407)
+-   [Tradução versão 1.0 do jogo James Bond Jr.](//romhackers.org/traducoes/console/nes/james-bond-jr.-(po.b.r.e.)/)
 
 Continuando com os lançamentos, eu gostaria de anunciar a conclusão de outro projeto que eu sempre desejei fazer. Trata-se da tradução para o jogo **Akumajou Densetsu**, conhecido no ocidente como **Castlevania III - Dracula's Curse**. Apesar da versão americana desse jogo já possuir uma tradução para o idioma português (e da versão japonesa possuir uma tradução incompleta para o idioma português europeu), o fato de nunca ter sido feita uma tradução completa da versão japonesa para o idioma português sempre foi algo que me intrigou. Ainda mais porque a versão japonesa do jogo possui diferenças significativas em relação à versão americana, tais como o som (que é melhor na versão japonesa), os diálogos e gráficos sem a tradicional censura imposta pela "Nintendo of America", dentre outros. Então eu resolvi arregaçar as mangas e comecei a trabalhar nesse projeto, que felizmente também foi concluído com êxito. O resultado desse trabalho pode ser visto nas imagens abaixo.
 
-![](//web.archive.org/web/20200928103531im_/http://www.romhackers.org/imagens/traducoes/[NES]%20Akumajou%20Densetsu%20-%20POBRE%20-%201.png) ![](//web.archive.org/web/20200928103531im_/http://www.romhackers.org/imagens/traducoes/[NES]%20Akumajou%20Densetsu%20-%20POBRE%20-%203.png)\
+![](//img.romhackers.org/traducoes/[NES]%20Akumajou%20Densetsu%20-%20POBRE%20-%201.png) ![](//img.romhackers.org/traducoes/[NES]%20Akumajou%20Densetsu%20-%20POBRE%20-%203.png)\
 *Akumajou Densetsu traduzido por Mr.Fox*
 
 OBS: Esta tradução usou como base a tradução para o idioma inglês feita pelo grupo **Vice Translations**, embora os diálogos tenham sido traduzidos diretamente do idioma japonês para o português. Além disso, o patch de tradução também adiciona algumas melhorias ao jogo, como a nova tela de título e a modificação nos gráficos do personagem Alucard, ambas feitas pelos romhackers **ShadowOne333** e **Vanya**.
 
 Segue o link para o download da tradução:
 
--   [Tradução versão 1.0 do jogo Akumajou Densetsu](//web.archive.org/web/20200928103531/http://romhackers.org/modules/PDdownloads/singlefile.php?cid=22&lid=1406)
+-   [Tradução versão 1.0 do jogo Akumajou Densetsu](//romhackers.org/traducoes/console/nes/akumajou-densetsu-(po.b.r.e.)/)
 
 Ainda sobre a série **Castlevania**, eu gostaria de aproveitar a deixa para anunciar o lançamento da minha tradução para o primeiro jogo da série feito para o Nintendo 8 bits. Trata-se do **Akumajou Dracula**, conhecido no ocidente simplesmente como **Castlevania**. Eu traduzi tanto a versão japonesa como a versão americana, como vocês podem conferir abaixo:
 
-![](//web.archive.org/web/20200928103531im_/http://www.romhackers.org/imagens/traducoes/[NES]%20Akumajou%20Dracula%20-%20POBRE%20-%201.png) ![](//web.archive.org/web/20200928103531im_/http://www.romhackers.org/imagens/traducoes/[NES]%20Akumajou%20Dracula%20-%20POBRE%20-%202.png)\
+![](//img.romhackers.org/traducoes/[NES]%20Akumajou%20Dracula%20-%20POBRE%20-%201.png) ![](//img.romhackers.org/traducoes/[NES]%20Akumajou%20Dracula%20-%20POBRE%20-%202.png)\
 *Akumajou Dracula traduzido por Mr.Fox*
 
 Seguem os links para o download da tradução:
 
--   [Tradução versão 1.0 do jogo Akumajou Dracula](//web.archive.org/web/20200928103531/http://romhackers.org/modules/PDdownloads/singlefile.php?cid=22&lid=1400)
--   [Tradução versão 1.0 do jogo Castlevania](//web.archive.org/web/20200928103531/http://romhackers.org/modules/PDdownloads/singlefile.php?cid=22&lid=1401)
+-   [Tradução versão 1.0 do jogo Akumajou Dracula](//romhackers.org/traducoes/console/nes/akumajou-dracula-(po.b.r.e.)/)
+-   [Tradução versão 1.0 do jogo Castlevania](//romhackers.org/traducoes/console/nes/castlevania-(po.b.r.e.)/)
 
 **OBS: Se o Windows Defender acusar falso positivo para vírus no download do patch do Akumajou Dracula, evitem baixar o patch através dos navegadores Microsoft Edge e Google Chrome e usem o Mozilla Firefox em vez disso.**
 
 Continuando com os lançamentos, temos a tradução de outros dois jogos que eu sempre quis fazer, mas que só consegui reunir as informações necessárias para concretizá-las no ano passado. Trata-se da tradução para os jogos **The Flintstones - The Rescue of Dino & Hoppy** e **The Flintstones - The Surprise at Dinosaur Peak!** (ambos do sistema Nintendo 8 bits). No caso da tradução do **The Flintstones - The Rescue of Dino & Hoppy**, também foram feitas algumas melhorias nos gráficos e cores do jogo, como vocês poderão conferir ao baixarem a tradução.
 
-![](//web.archive.org/web/20200928103531im_/http://www.romhackers.org/imagens/traducoes/[NES]%20The%20Flintstones%20-%20POBRE%20-%201.png) ![](//web.archive.org/web/20200928103531im_/http://www.romhackers.org/imagens/traducoes/[NES]%20The%20Flintstones%20-%20POBRE%20-%203.png)\
+![](//img.romhackers.org/traducoes/[NES]%20The%20Flintstones%20-%20POBRE%20-%201.png) ![](//img.romhackers.org/traducoes/[NES]%20The%20Flintstones%20-%20POBRE%20-%203.png)\
 *The Flintstones - The Rescue of Dino & Hoppy traduzido por Mr.Fox*
 
-![](//web.archive.org/web/20200928103531im_/http://www.romhackers.org/imagens/traducoes/[NES]%20The%20Flintstones%20-%20The%20Surprise%20at%20Dinosaur%20Peak%20-%20POBRE%20-%201.png) ![](//web.archive.org/web/20200928103531im_/http://www.romhackers.org/imagens/traducoes/[NES]%20The%20Flintstones%20-%20The%20Surprise%20at%20Dinosaur%20Peak%20-%20POBRE%20-%202.png)\
+![](//img.romhackers.org/traducoes/[NES]%20The%20Flintstones%20-%20The%20Surprise%20at%20Dinosaur%20Peak%20-%20POBRE%20-%201.png) ![](//img.romhackers.org/traducoes/[NES]%20The%20Flintstones%20-%20The%20Surprise%20at%20Dinosaur%20Peak%20-%20POBRE%20-%202.png)\
 *The Flintstones - The Surprise at Dinosaur Peak! traduzido por Mr.Fox*
 
 Seguem os links para o download das traduções:
 
--   [Tradução versão 1.0 do jogo The Flintstones - The Rescue of Dino & Hoppy](//web.archive.org/web/20200928103531/http://romhackers.org/modules/PDdownloads/singlefile.php?cid=22&lid=1405)
--   [Tradução versão 1.0 do jogo The Flintstones - The Surprise at Dinosaur Peak!](//web.archive.org/web/20200928103531/http://romhackers.org/modules/PDdownloads/singlefile.php?cid=22&lid=1404)
+-   [Tradução versão 1.0 do jogo The Flintstones - The Rescue of Dino & Hoppy](//romhackers.org/traducoes/console/nes/the-flintstones-the-rescue-of-dino-and-hoppy-(po.b.r.e.)/)
+-   [Tradução versão 1.0 do jogo The Flintstones - The Surprise at Dinosaur Peak!](//romhackers.org/traducoes/console/nes/the-flintstones-the-surprise-at-dinosaur-peak!-(po.b.r.e.)/)
 
 Para engrossar a lista de lançamentos, temos mais duas traduções: **Shinobi** (sistema Nintendo 8 bits) e **Psychic World** (sistema Master System).
 
-![](//web.archive.org/web/20200928103531im_/http://www.romhackers.org/imagens/traducoes/[NES]%20Shinobi%20-%20POBRE%20-%201.png) ![](//web.archive.org/web/20200928103531im_/http://www.romhackers.org/imagens/traducoes/[NES]%20Shinobi%20-%20POBRE%20-%202.png)\
+![](//img.romhackers.org/traducoes/[NES]%20Shinobi%20-%20POBRE%20-%201.png) ![](//img.romhackers.org/traducoes/[NES]%20Shinobi%20-%20POBRE%20-%202.png)\
 *Shinobi traduzido por Mr.Fox*
 
-![](//web.archive.org/web/20200928103531im_/http://www.romhackers.org/imagens/traducoes/[SMS]%20Psychic%20World%20-%20POBRE%20-%201.png) ![](//web.archive.org/web/20200928103531im_/http://www.romhackers.org/imagens/traducoes/[SMS]%20Psychic%20World%20-%20POBRE%20-%202.png)\
+![](//img.romhackers.org/traducoes/[SMS]%20Psychic%20World%20-%20POBRE%20-%201.png) ![](//img.romhackers.org/traducoes/[SMS]%20Psychic%20World%20-%20POBRE%20-%202.png)\
 *Psychic World traduzido por Mr.Fox*
 
 OBS: A tradução do **Shinobi** para o idioma português incorpora as melhorias do hack feito pelo romhacker **The Jabu**, que deixa os gráficos do jogo bem mais apresentáveis do que os originais feitos pela Tengen.
 
 Seguem os links para o download das traduções:
 
--   [Tradução versão 1.0 do jogo Shinobi](//web.archive.org/web/20200928103531/http://romhackers.org/modules/PDdownloads/singlefile.php?cid=22&lid=1397)
--   [Tradução versão 1.0 do jogo Psychic World](//web.archive.org/web/20200928103531/http://romhackers.org/modules/PDdownloads/singlefile.php?cid=20&lid=1402)
+-   [Tradução versão 1.0 do jogo Shinobi](//romhackers.org/traducoes/console/nes/shinobi-(po.b.r.e.)/)
+-   [Tradução versão 1.0 do jogo Psychic World](//romhackers.org/traducoes/console/master-system/psychic-world-(po.b.r.e.)/)
 
 Além disso, temos a tradução do **Chou Wakusei Senki Metafight** (sistema Nintendo 8 bits), que é a versão japonesa do jogo **Blaster Master**, também traduzido por mim em 2005 (e atualizado em 2008).
 
-![](//web.archive.org/web/20200928103531im_/http://www.romhackers.org/imagens/traducoes/[NES]%20Chou-Wakusei%20Senki%20-%20MetaFight%20-%20POBRE%20-%201.png) ![](//web.archive.org/web/20200928103531im_/http://www.romhackers.org/imagens/traducoes/[NES]%20Chou-Wakusei%20Senki%20-%20MetaFight%20-%20POBRE%20-%203.png)\
+![](//img.romhackers.org/traducoes/[NES]%20Chou-Wakusei%20Senki%20-%20MetaFight%20-%20POBRE%20-%201.png) ![](//img.romhackers.org/traducoes/[NES]%20Chou-Wakusei%20Senki%20-%20MetaFight%20-%20POBRE%20-%203.png)\
 *Chou Wakusei Senki Metafight traduzido por Mr.Fox*
 
 Segue o link para o download da tradução:
 
--   [Tradução versão 1.0 do jogo Chou Wakusei Senki Metafight](//web.archive.org/web/20200928103531/http://romhackers.org/modules/PDdownloads/singlefile.php?cid=22&lid=1399)
+-   [Tradução versão 1.0 do jogo Chou Wakusei Senki Metafight](//romhackers.org/traducoes/console/nes/chou-wakusei-senki-metafight-(po.b.r.e.)/)
 
 Para finalizar as novas traduções, eu gostaria de anunciar o lançamento de mais uma tradução que há muito tempo eu (também) queria fazer. Trata-se de **Magic John** (sistema Nintendo 8 bits), que é a versão japonesa do jogo **Totally Rad**, também traduzido por mim em 2005 (e atualizado em 2008).
 
-![](//web.archive.org/web/20200928103531im_/http://www.romhackers.org/imagens/traducoes/[NES]%20Magic%20John%20-%20POBRE%20-%201.png) ![](//web.archive.org/web/20200928103531im_/http://www.romhackers.org/imagens/traducoes/[NES]%20Magic%20John%20-%20POBRE%20-%203.png)\
+![](//img.romhackers.org/traducoes/[NES]%20Magic%20John%20-%20POBRE%20-%201.png) ![](//img.romhackers.org/traducoes/[NES]%20Magic%20John%20-%20POBRE%20-%203.png)\
 *Magic John traduzido por Mr.Fox*
 
 OBS: A tradução do **Magic John** usou como base a tradução para o idioma inglês feita por **Shih Tzu** (The Rad Project) e **KingMike**.
 
 Segue o link para o download da tradução:
 
--   [Tradução versão 1.0 do jogo Magic John](//web.archive.org/web/20200928103531/http://romhackers.org/modules/PDdownloads/singlefile.php?cid=22&lid=1403)
+-   [Tradução versão 1.0 do jogo Magic John](//romhackers.org/traducoes/console/nes/magic-john-(po.b.r.e.)/)
 
 Além do lançamento das novas traduções supracitadas, nós também gostaríamos de anunciar o lançamento das revisões das seguintes traduções: **Batman - The Video Game**, **Batman Beta**, **Batman - Return of the Joker**, **Blaster Master**, **Captain America and The Avengers**, **Dragon Ninja**, **Frankenstein - The Monster Returns**, **Gradius**, **Gradius II**, **Rollergames**, **Shadow of the Ninja** e **Totally Rad** (todas do sistema Nintendo 8 bits). Todas as traduções sofreram correções e melhorias significativas. Algumas traduções, como **Batman - The Video Game**, **Batman Beta** e **Batman - Return of the Joker**, ganharam patches bônus que agregam melhorias aos gráficos do jogo.
 
-![](//web.archive.org/web/20200928103531im_/http://www.romhackers.org/imagens/traducoes/[NES]%20Batman%20-%20POBRE%20-%201.png) ![](//web.archive.org/web/20200928103531im_/http://www.romhackers.org/imagens/traducoes/[NES]%20Batman%20-%20POBRE%20-%202.png)\
+![](//img.romhackers.org/traducoes/[NES]%20Batman%20-%20POBRE%20-%201.png) ![](//img.romhackers.org/traducoes/[NES]%20Batman%20-%20POBRE%20-%202.png)\
 *Batman - The Video Game traduzido por Mr.Fox*
 
-![](//web.archive.org/web/20200928103531im_/http://www.romhackers.org/imagens/traducoes/[NES]%20Batman%20-%20Return%20of%20the%20Joker%20-%20POBRE%20-%201.png) ![](//web.archive.org/web/20200928103531im_/http://www.romhackers.org/imagens/traducoes/[NES]%20Batman%20-%20Return%20of%20the%20Joker%20-%20POBRE%20-%203.png)\
+![](//img.romhackers.org/traducoes/[NES]%20Batman%20-%20Return%20of%20the%20Joker%20-%20POBRE%20-%201.png) ![](//img.romhackers.org/traducoes/[NES]%20Batman%20-%20Return%20of%20the%20Joker%20-%20POBRE%20-%203.png)\
 *Batman - Return of the Joker traduzido por Mr.Fox*
 
-![](//web.archive.org/web/20200928103531im_/http://www.romhackers.org/imagens/traducoes/[NES]%20Captain%20America%20-%20POBRE%20-%201.png) ![](//web.archive.org/web/20200928103531im_/http://www.romhackers.org/imagens/traducoes/[NES]%20Captain%20America%20-%20POBRE%20-%202.png)\
+![](//img.romhackers.org/traducoes/[NES]%20Captain%20America%20-%20POBRE%20-%201.png) ![](//img.romhackers.org/traducoes/[NES]%20Captain%20America%20-%20POBRE%20-%202.png)\
 *Captain America and The Avengers traduzido por Mr.Fox*
 
-![](//web.archive.org/web/20200928103531im_/http://www.romhackers.org/imagens/traducoes/[NES]%20Dragon%20Ninja%20-%20POBRE%20-%201.png) ![](//web.archive.org/web/20200928103531im_/http://www.romhackers.org/imagens/traducoes/[NES]%20Dragon%20Ninja%20-%20POBRE%20-%203.png)\
+![](//img.romhackers.org/traducoes/[NES]%20Dragon%20Ninja%20-%20POBRE%20-%201.png) ![](//img.romhackers.org/traducoes/[NES]%20Dragon%20Ninja%20-%20POBRE%20-%203.png)\
 *Dragon Ninja traduzido por Mr.Fox*
 
-![](//web.archive.org/web/20200928103531im_/http://www.romhackers.org/imagens/traducoes/[NES]%20Rollergames%20-%20POBRE%20-%201.png) ![](//web.archive.org/web/20200928103531im_/http://www.romhackers.org/imagens/traducoes/[NES]%20Rollergames%20-%20POBRE%20-%203.png)\
+![](//img.romhackers.org/traducoes/[NES]%20Rollergames%20-%20POBRE%20-%201.png) ![](//img.romhackers.org/traducoes/[NES]%20Rollergames%20-%20POBRE%20-%203.png)\
 *Rollergames traduzido por Mr.Fox*
 
-![](//web.archive.org/web/20200928103531im_/http://www.romhackers.org/imagens/traducoes/[NES]%20Shadow%20of%20the%20Ninja%20-%20POBRE%20-%201.png) ![](//web.archive.org/web/20200928103531im_/http://www.romhackers.org/imagens/traducoes/[NES]%20Shadow%20of%20the%20Ninja%20-%20POBRE%20-%202.png)\
+![](//img.romhackers.org/traducoes/[NES]%20Shadow%20of%20the%20Ninja%20-%20POBRE%20-%201.png) ![](//img.romhackers.org/traducoes/[NES]%20Shadow%20of%20the%20Ninja%20-%20POBRE%20-%202.png)\
 *Shadow of the Ninja traduzido por Mr.Fox*
 
-![](//web.archive.org/web/20200928103531im_/http://www.romhackers.org/imagens/traducoes/[NES]%20Totally%20Rad%20-%20POBRE%20-%201.png) ![](//web.archive.org/web/20200928103531im_/http://www.romhackers.org/imagens/traducoes/[NES]%20Totally%20Rad%20-%20POBRE%20-%203.png)\
+![](//img.romhackers.org/traducoes/[NES]%20Totally%20Rad%20-%20POBRE%20-%201.png) ![](//img.romhackers.org/traducoes/[NES]%20Totally%20Rad%20-%20POBRE%20-%203.png)\
 *Totally Rad traduzido por Mr.Fox*
 
 Seguem os links para o download das traduções:
 
--   [Tradução versão 1.2 do jogo Batman - The Video Game](//web.archive.org/web/20200928103531/http://romhackers.org/modules/PDdownloads/singlefile.php?cid=22&lid=640)
--   [Tradução versão 1.1 do jogo Batman Beta](//web.archive.org/web/20200928103531/http://romhackers.org/modules/PDdownloads/singlefile.php?cid=22&lid=943)
--   [Tradução versão 1.1 do jogo Batman - Return of the Joker](//web.archive.org/web/20200928103531/http://romhackers.org/modules/PDdownloads/singlefile.php?cid=22&lid=525)
--   [Tradução versão 1.2 do jogo Blaster Master (ROM americana)](//web.archive.org/web/20200928103531/http://romhackers.org/modules/PDdownloads/singlefile.php?cid=22&lid=18)
--   [Tradução versão 1.2 do jogo Blaster Master (ROM europeia)](//web.archive.org/web/20200928103531/http://romhackers.org/modules/PDdownloads/singlefile.php?cid=22&lid=17)
--   [Tradução versão 1.2 do jogo Captain America and the Avengers](//web.archive.org/web/20200928103531/http://romhackers.org/modules/PDdownloads/singlefile.php?cid=22&lid=61)
--   [Tradução versão 1.1 do jogo Dragon Ninja](//web.archive.org/web/20200928103531/http://romhackers.org/modules/PDdownloads/singlefile.php?cid=22&lid=1190)
--   [Tradução versão 1.3 do jogo Frankenstein - The Monster Returns](//web.archive.org/web/20200928103531/http://romhackers.org/modules/PDdownloads/singlefile.php?cid=22&lid=22)
--   [Tradução versão 1.1 do jogo Gradius (ROM americana)](//web.archive.org/web/20200928103531/http://romhackers.org/modules/PDdownloads/singlefile.php?cid=22&lid=23)
--   [Tradução versão 1.1 do jogo Gradius (ROM japonesa)](//web.archive.org/web/20200928103531/http://romhackers.org/modules/PDdownloads/singlefile.php?cid=22&lid=1398)
--   [Tradução versão 1.1 do jogo Gradius II](//web.archive.org/web/20200928103531/http://romhackers.org/modules/PDdownloads/singlefile.php?cid=22&lid=24)
--   [Tradução versão 1.1 do jogo Rollergames](//web.archive.org/web/20200928103531/http://romhackers.org/modules/PDdownloads/singlefile.php?cid=22&lid=25)
--   [Tradução versão 1.1 do jogo Shadow of the Ninja](//web.archive.org/web/20200928103531/http://romhackers.org/modules/PDdownloads/singlefile.php?cid=22&lid=28)
--   [Tradução versão 1.4 do jogo Totally Rad](//web.archive.org/web/20200928103531/http://romhackers.org/modules/PDdownloads/singlefile.php?cid=22&lid=30)
+-   [Tradução versão 1.2 do jogo Batman - The Video Game](//romhackers.org/traducoes/console/nes/batman-the-video-game-(po.b.r.e.)/)
+-   [Tradução versão 1.1 do jogo Batman Beta](//romhackers.org/traducoes/console/nes/batman-the-video-game-(versao-beta-do-jogo)-(po.b.r.e.)/)
+-   [Tradução versão 1.1 do jogo Batman - Return of the Joker](//romhackers.org/traducoes/console/nes/batman-return-of-the-joker-(po.b.r.e.)/)
+-   [Tradução versão 1.2 do jogo Blaster Master (ROM americana)](//romhackers.org/traducoes/console/nes/blaster-master-(versao-americana)-(po.b.r.e.)/)
+-   [Tradução versão 1.2 do jogo Blaster Master (ROM europeia)](//romhackers.org/traducoes/console/nes/blaster-master-(versao-europeia)-(po.b.r.e.)/)
+-   [Tradução versão 1.2 do jogo Captain America and the Avengers](//romhackers.org/traducoes/console/nes/captain-america-and-the-avengers-(po.b.r.e.)/)
+-   [Tradução versão 1.1 do jogo Dragon Ninja](//romhackers.org/traducoes/console/nes/dragon-ninja-(po.b.r.e.)/)
+-   [Tradução versão 1.3 do jogo Frankenstein - The Monster Returns](//romhackers.org/traducoes/console/nes/frankenstein-the-monster-returns-(po.b.r.e.)/)
+-   [Tradução versão 1.1 do jogo Gradius (ROM americana)](//romhackers.org/traducoes/console/nes/gradius-(versao-americana)/)
+-   [Tradução versão 1.1 do jogo Gradius (ROM japonesa)](//romhackers.org/traducoes/console/nes/gradius-(versao-japonesa)-(po.b.r.e.)/)
+-   [Tradução versão 1.1 do jogo Gradius II](//romhackers.org/traducoes/console/nes/gradius-ii-(po.b.r.e.)/)
+-   [Tradução versão 1.1 do jogo Rollergames](//romhackers.org/traducoes/console/nes/rollergames-(po.b.r.e.)/)
+-   [Tradução versão 1.1 do jogo Shadow of the Ninja](//romhackers.org/traducoes/console/nes/shadow-of-the-ninja-(po.b.r.e.)/)
+-   [Tradução versão 1.4 do jogo Totally Rad](//romhackers.org/traducoes/console/nes/totally-rad-(po.b.r.e.)/)
 
 Então é isso, pessoal. A equipe **PO.B.R.E.** gostaria de agradecer a todos aqueles que nos acompanharam e colaboraram conosco ao longo desses longos 11 anos de estrada. Nós desejamos um ótimo divertimento a todos, e fiquem atentos às próximas notícias.
 
