URL's amigaveis corrigidas em notícias

--- a/_noticias/2019-03-07-pobre-11-anos.md
+++ b/_noticias/2019-03-07-pobre-11-anos.md
@@ -22,7 +22,7 @@ OBS: O pacote de tradução contém, além do *patch* de tradução, um *patc
 
 Segue o link para o download da tradução:
 
--   [Tradução versão 1.0 do jogo James Bond Jr.](//romhackers.org/traducoes/console/nes/james-bond-jr.-(po.b.r.e.)/)
+-   [Tradução versão 1.0 do jogo James Bond Jr.](//romhackers.org/traducoes/console/nes/james-bond-jr.-po.b.r.e./)
 
 Continuando com os lançamentos, eu gostaria de anunciar a conclusão de outro projeto que eu sempre desejei fazer. Trata-se da tradução para o jogo **Akumajou Densetsu**, conhecido no ocidente como **Castlevania III - Dracula's Curse**. Apesar da versão americana desse jogo já possuir uma tradução para o idioma português (e da versão japonesa possuir uma tradução incompleta para o idioma português europeu), o fato de nunca ter sido feita uma tradução completa da versão japonesa para o idioma português sempre foi algo que me intrigou. Ainda mais porque a versão japonesa do jogo possui diferenças significativas em relação à versão americana, tais como o som (que é melhor na versão japonesa), os diálogos e gráficos sem a tradicional censura imposta pela "Nintendo of America", dentre outros. Então eu resolvi arregaçar as mangas e comecei a trabalhar nesse projeto, que felizmente também foi concluído com êxito. O resultado desse trabalho pode ser visto nas imagens abaixo.
 
@@ -33,7 +33,7 @@ OBS: Esta tradução usou como base a tradução para o idioma inglês feita pel
 
 Segue o link para o download da tradução:
 
--   [Tradução versão 1.0 do jogo Akumajou Densetsu](//romhackers.org/traducoes/console/nes/akumajou-densetsu-(po.b.r.e.)/)
+-   [Tradução versão 1.0 do jogo Akumajou Densetsu](//romhackers.org/traducoes/console/nes/akumajou-densetsu-po.b.r.e./)
 
 Ainda sobre a série **Castlevania**, eu gostaria de aproveitar a deixa para anunciar o lançamento da minha tradução para o primeiro jogo da série feito para o Nintendo 8 bits. Trata-se do **Akumajou Dracula**, conhecido no ocidente simplesmente como **Castlevania**. Eu traduzi tanto a versão japonesa como a versão americana, como vocês podem conferir abaixo:
 
@@ -42,8 +42,8 @@ Ainda sobre a série **Castlevania**, eu gostaria de aproveitar a deixa para an
 
 Seguem os links para o download da tradução:
 
--   [Tradução versão 1.0 do jogo Akumajou Dracula](//romhackers.org/traducoes/console/nes/akumajou-dracula-(po.b.r.e.)/)
--   [Tradução versão 1.0 do jogo Castlevania](//romhackers.org/traducoes/console/nes/castlevania-(po.b.r.e.)/)
+-   [Tradução versão 1.0 do jogo Akumajou Dracula](//romhackers.org/traducoes/console/nes/akumajou-dracula-po.b.r.e./)
+-   [Tradução versão 1.0 do jogo Castlevania](//romhackers.org/traducoes/console/nes/castlevania-po.b.r.e./)
 
 **OBS: Se o Windows Defender acusar falso positivo para vírus no download do patch do Akumajou Dracula, evitem baixar o patch através dos navegadores Microsoft Edge e Google Chrome e usem o Mozilla Firefox em vez disso.**
 
@@ -57,8 +57,8 @@ Continuando com os lançamentos, temos a tradução de outros dois jogos que eu 
 
 Seguem os links para o download das traduções:
 
--   [Tradução versão 1.0 do jogo The Flintstones - The Rescue of Dino & Hoppy](//romhackers.org/traducoes/console/nes/the-flintstones-the-rescue-of-dino-and-hoppy-(po.b.r.e.)/)
--   [Tradução versão 1.0 do jogo The Flintstones - The Surprise at Dinosaur Peak!](//romhackers.org/traducoes/console/nes/the-flintstones-the-surprise-at-dinosaur-peak!-(po.b.r.e.)/)
+-   [Tradução versão 1.0 do jogo The Flintstones - The Rescue of Dino & Hoppy](//romhackers.org/traducoes/console/nes/the-flintstones-the-rescue-of-dino-and-hoppy-po.b.r.e./)
+-   [Tradução versão 1.0 do jogo The Flintstones - The Surprise at Dinosaur Peak!](//romhackers.org/traducoes/console/nes/the-flintstones-the-surprise-at-dinosaur-peak!-po.b.r.e./)
 
 Para engrossar a lista de lançamentos, temos mais duas traduções: **Shinobi** (sistema Nintendo 8 bits) e **Psychic World** (sistema Master System).
 
@@ -72,8 +72,8 @@ OBS: A tradução do **Shinobi** para o idioma português incorpora as melhori
 
 Seguem os links para o download das traduções:
 
--   [Tradução versão 1.0 do jogo Shinobi](//romhackers.org/traducoes/console/nes/shinobi-(po.b.r.e.)/)
--   [Tradução versão 1.0 do jogo Psychic World](//romhackers.org/traducoes/console/master-system/psychic-world-(po.b.r.e.)/)
+-   [Tradução versão 1.0 do jogo Shinobi](//romhackers.org/traducoes/console/nes/shinobi-po.b.r.e./)
+-   [Tradução versão 1.0 do jogo Psychic World](//romhackers.org/traducoes/console/master-system/psychic-world-po.b.r.e./)
 
 Além disso, temos a tradução do **Chou Wakusei Senki Metafight** (sistema Nintendo 8 bits), que é a versão japonesa do jogo **Blaster Master**, também traduzido por mim em 2005 (e atualizado em 2008).
 
@@ -82,7 +82,7 @@ Além disso, temos a tradução do **Chou Wakusei Senki Metafight** (sistema N
 
 Segue o link para o download da tradução:
 
--   [Tradução versão 1.0 do jogo Chou Wakusei Senki Metafight](//romhackers.org/traducoes/console/nes/chou-wakusei-senki-metafight-(po.b.r.e.)/)
+-   [Tradução versão 1.0 do jogo Chou Wakusei Senki Metafight](//romhackers.org/traducoes/console/nes/chou-wakusei-senki-metafight-po.b.r.e./)
 
 Para finalizar as novas traduções, eu gostaria de anunciar o lançamento de mais uma tradução que há muito tempo eu (também) queria fazer. Trata-se de **Magic John** (sistema Nintendo 8 bits), que é a versão japonesa do jogo **Totally Rad**, também traduzido por mim em 2005 (e atualizado em 2008).
 
@@ -93,7 +93,7 @@ OBS: A tradução do **Magic John** usou como base a tradução para o idioma 
 
 Segue o link para o download da tradução:
 
--   [Tradução versão 1.0 do jogo Magic John](//romhackers.org/traducoes/console/nes/magic-john-(po.b.r.e.)/)
+-   [Tradução versão 1.0 do jogo Magic John](//romhackers.org/traducoes/console/nes/magic-john-po.b.r.e./)
 
 Além do lançamento das novas traduções supracitadas, nós também gostaríamos de anunciar o lançamento das revisões das seguintes traduções: **Batman - The Video Game**, **Batman Beta**, **Batman - Return of the Joker**, **Blaster Master**, **Captain America and The Avengers**, **Dragon Ninja**, **Frankenstein - The Monster Returns**, **Gradius**, **Gradius II**, **Rollergames**, **Shadow of the Ninja** e **Totally Rad** (todas do sistema Nintendo 8 bits). Todas as traduções sofreram correções e melhorias significativas. Algumas traduções, como **Batman - The Video Game**, **Batman Beta** e **Batman - Return of the Joker**, ganharam patches bônus que agregam melhorias aos gráficos do jogo.
 
@@ -120,20 +120,20 @@ Além do lançamento das novas traduções supracitadas, nós também gostaríam
 
 Seguem os links para o download das traduções:
 
--   [Tradução versão 1.2 do jogo Batman - The Video Game](//romhackers.org/traducoes/console/nes/batman-the-video-game-(po.b.r.e.)/)
--   [Tradução versão 1.1 do jogo Batman Beta](//romhackers.org/traducoes/console/nes/batman-the-video-game-(versao-beta-do-jogo)-(po.b.r.e.)/)
--   [Tradução versão 1.1 do jogo Batman - Return of the Joker](//romhackers.org/traducoes/console/nes/batman-return-of-the-joker-(po.b.r.e.)/)
--   [Tradução versão 1.2 do jogo Blaster Master (ROM americana)](//romhackers.org/traducoes/console/nes/blaster-master-(versao-americana)-(po.b.r.e.)/)
--   [Tradução versão 1.2 do jogo Blaster Master (ROM europeia)](//romhackers.org/traducoes/console/nes/blaster-master-(versao-europeia)-(po.b.r.e.)/)
--   [Tradução versão 1.2 do jogo Captain America and the Avengers](//romhackers.org/traducoes/console/nes/captain-america-and-the-avengers-(po.b.r.e.)/)
--   [Tradução versão 1.1 do jogo Dragon Ninja](//romhackers.org/traducoes/console/nes/dragon-ninja-(po.b.r.e.)/)
--   [Tradução versão 1.3 do jogo Frankenstein - The Monster Returns](//romhackers.org/traducoes/console/nes/frankenstein-the-monster-returns-(po.b.r.e.)/)
--   [Tradução versão 1.1 do jogo Gradius (ROM americana)](//romhackers.org/traducoes/console/nes/gradius-(versao-americana)/)
--   [Tradução versão 1.1 do jogo Gradius (ROM japonesa)](//romhackers.org/traducoes/console/nes/gradius-(versao-japonesa)-(po.b.r.e.)/)
--   [Tradução versão 1.1 do jogo Gradius II](//romhackers.org/traducoes/console/nes/gradius-ii-(po.b.r.e.)/)
--   [Tradução versão 1.1 do jogo Rollergames](//romhackers.org/traducoes/console/nes/rollergames-(po.b.r.e.)/)
--   [Tradução versão 1.1 do jogo Shadow of the Ninja](//romhackers.org/traducoes/console/nes/shadow-of-the-ninja-(po.b.r.e.)/)
--   [Tradução versão 1.4 do jogo Totally Rad](//romhackers.org/traducoes/console/nes/totally-rad-(po.b.r.e.)/)
+-   [Tradução versão 1.2 do jogo Batman - The Video Game](//romhackers.org/traducoes/console/nes/batman-the-video-game-po.b.r.e./)
+-   [Tradução versão 1.1 do jogo Batman Beta](//romhackers.org/traducoes/console/nes/batman-the-video-game-(versao-beta-do-jogo)-po.b.r.e./)
+-   [Tradução versão 1.1 do jogo Batman - Return of the Joker](//romhackers.org/traducoes/console/nes/batman-return-of-the-joker-po.b.r.e./)
+-   [Tradução versão 1.2 do jogo Blaster Master (ROM americana)](//romhackers.org/traducoes/console/nes/blaster-master-versao-americana-po.b.r.e./)
+-   [Tradução versão 1.2 do jogo Blaster Master (ROM europeia)](//romhackers.org/traducoes/console/nes/blaster-master-versao-europeia-po.b.r.e./)
+-   [Tradução versão 1.2 do jogo Captain America and the Avengers](//romhackers.org/traducoes/console/nes/captain-america-and-the-avengers-po.b.r.e./)
+-   [Tradução versão 1.1 do jogo Dragon Ninja](//romhackers.org/traducoes/console/nes/dragon-ninja-po.b.r.e./)
+-   [Tradução versão 1.3 do jogo Frankenstein - The Monster Returns](//romhackers.org/traducoes/console/nes/frankenstein-the-monster-returns-po.b.r.e./)
+-   [Tradução versão 1.1 do jogo Gradius (ROM americana)](//romhackers.org/traducoes/console/nes/gradius-versao-americana/)
+-   [Tradução versão 1.1 do jogo Gradius (ROM japonesa)](//romhackers.org/traducoes/console/nes/gradius-versao-japonesa-po.b.r.e./)
+-   [Tradução versão 1.1 do jogo Gradius II](//romhackers.org/traducoes/console/nes/gradius-ii-po.b.r.e./)
+-   [Tradução versão 1.1 do jogo Rollergames](//romhackers.org/traducoes/console/nes/rollergames-po.b.r.e./)
+-   [Tradução versão 1.1 do jogo Shadow of the Ninja](//romhackers.org/traducoes/console/nes/shadow-of-the-ninja-po.b.r.e./)
+-   [Tradução versão 1.4 do jogo Totally Rad](//romhackers.org/traducoes/console/nes/totally-rad-po.b.r.e./)
 
 Então é isso, pessoal. A equipe **PO.B.R.E.** gostaria de agradecer a todos aqueles que nos acompanharam e colaboraram conosco ao longo desses longos 11 anos de estrada. Nós desejamos um ótimo divertimento a todos, e fiquem atentos às próximas notícias.
 
