--- a/_noticias/2020-03-01-pobre-12-anos.md
+++ b/_noticias/2020-03-01-pobre-12-anos.md
@@ -16,14 +16,14 @@ Primeiramente, eu gostaria de anunciar o lançamento da tradução para o jogo 
 
 Segue o link para o download da tradução:
 
--   [Tradução versão 1.0 do jogo Batman Returns](//romhackers.org/traducoes/console/nes/batman-returns-(po.b.r.e.)/)
+-   [Tradução versão 1.0 do jogo Batman Returns](//romhackers.org/traducoes/console/nes/batman-returns-po.b.r.e./)
 
 A outra novidade é a tradução do jogo **Wolverine**, também do sistema Nintendo 8 bits, que eu fiz atendendo ao pedido de um amigo. O jogo está totalmente traduzido para o idioma português, como vocês poderão conferir abaixo:
 
 ![](//img.romhackers.org/projetos/[NES]%20Wolverine%20-%20Projeto%20-%2001.png) ![](//img.romhackers.org/projetos/[NES]%20Wolverine%20-%20Projeto%20-%2011.png)\
 *Wolverine traduzido por Mr.Fox*
 
--   [Tradução versão 1.0 do jogo Wolverine](//romhackers.org/traducoes/console/nes/wolverine-(po.b.r.e.)/)
+-   [Tradução versão 1.0 do jogo Wolverine](//romhackers.org/traducoes/console/nes/wolverine-po.b.r.e./)
 
 Agora vamos às novas versões de algumas traduções que lancei anterior. Para começar bem, eu gostaria de anunciar o lançamento da versão 1.1 da tradução para o jogo **Akumajou Densetsu** (aka Castlevania III), cuja versão 1.0 eu lancei ano passado. Esta nova versão está repleta de novidades que certamente agradarão a muitos fãs deste grande jogo. Uma curiosidade é que, exceto por um gráfico que eu esqueci de traduzir na versão 1.0, eu praticamente não atualizei nada na tradução do jogo. Contudo, esta versão 1.1 está cheia de **correções de bugs originais do jogo** e também **algumas melhorias**.
 
@@ -97,7 +97,7 @@ OBS: A lista completa das melhorias feitas encontra-se no arquivo **Lista de co
 
 Segue o link de download da tradução:
 
--   [Tradução versão 1.1 do jogo Akumajou Densetsu](//romhackers.org/traducoes/console/nes/akumajou-densetsu-(po.b.r.e.)/)
+-   [Tradução versão 1.1 do jogo Akumajou Densetsu](//romhackers.org/traducoes/console/nes/akumajou-densetsu-po.b.r.e./)
 
 Continuando com as traduções que receberam atualização, nós temos a versão 1.4 da tradução para o jogo **Kenseiden**, do sistema Master System. Nesta nova versão, os textos do jogo foram todos revisados com base nos textos da versão japonesa. Além disso, o pacote de tradução conta com dois *patches* bônus que restauram a paleta de cor da versão japonesa e da versão coreana do jogo.
 
@@ -106,7 +106,7 @@ Continuando com as traduções que receberam atualização, nós temos a versão
 
 Segue o link de download da tradução:
 
--   [Tradução versão 1.4 do jogo Kenseiden](//romhackers.org/traducoes/console/master-system/kenseiden-(po.b.r.e.)/)
+-   [Tradução versão 1.4 do jogo Kenseiden](//romhackers.org/traducoes/console/master-system/kenseiden-po.b.r.e./)
 
 Além disso, eu também aproveitei os últimos meses para atualizar as traduções para o jogos **Zillion** e **Zillion II - The Tri Formation**, ambos do sistema Master System. As duas traduções agora contam com a tradução dos textos e gráficos totalmente revisados, além de outras pequenas correções e ajustes.
 
@@ -118,8 +118,8 @@ Além disso, eu também aproveitei os últimos meses para atualizar as traduçõ
 
 Seguem os links para download das traduções:
 
--   [Tradução versão 1.2 do jogo Zillion](//romhackers.org/traducoes/console/master-system/zillion-(po.b.r.e.)/)
--   [Tradução versão 1.1 do jogo Zillion II - Tri Formation](//romhackers.org/traducoes/console/master-system/zillion-ii-the-tri-formation-(po.b.r.e.)/)
+-   [Tradução versão 1.2 do jogo Zillion](//romhackers.org/traducoes/console/master-system/zillion-po.b.r.e./)
+-   [Tradução versão 1.1 do jogo Zillion II - Tri Formation](//romhackers.org/traducoes/console/master-system/zillion-ii-the-tri-formation-po.b.r.e./)
 
 Para encerrar, eu gostaria de anunciar que fiz algumas pequenas melhorias em outras duas traduções minhas: **Double Dragon** e **Double Dragon II - The Revenge**, ambos do sistema Nintendo 8 bits. Na tradução do Double Dragon, eu atualizei a tradução de dois gráficos: **CPU**, que antes estava traduzido como **COMP.** e agora está traduzido na íntegra como **COMPUTADOR**, e **VS MODE**, que antes estava traduzido como **MODO VS** e agora está traduzido como **DUELO**. Já na tradução do **Double Dragon II - The Revenge**, eu corrigi o *tilemap* do gráfico **CUIDADO** da fase 2 e alterei as cores do gráfico **MANDA BRASA** para que o texto ficasse nítido em TVs de CRT (para quem vai jogar a tradução no console real via Everdrive N8, NES Powerpak e afins).
 
@@ -131,8 +131,8 @@ Para encerrar, eu gostaria de anunciar que fiz algumas pequenas melhorias em out
 
 Seguem os links para download das traduções:
 
--   [Tradução versão 1.3 do jogo Double Dragon](//romhackers.org/traducoes/console/nes/double-dragon-(po.b.r.e.)/)
--   [Tradução versão 1.2 do jogo Double Dragon II - The Revenge](//romhackers.org/traducoes/console/nes/double-dragon-ii-the-revenge-(po.b.r.e.)/)
+-   [Tradução versão 1.3 do jogo Double Dragon](//romhackers.org/traducoes/console/nes/double-dragon-po.b.r.e./)
+-   [Tradução versão 1.2 do jogo Double Dragon II - The Revenge](//romhackers.org/traducoes/console/nes/double-dragon-ii-the-revenge-po.b.r.e./)
 
 Bom, então é isso, pessoal. A equipe **PO.B.R.E.** gostaria de agradecer a todos aqueles que nos acompanharam e colaboraram conosco durante todo esse tempo. Nós desejamos um ótimo divertimento a todos, e fiquem atentos às próximas notícias. ![](//web.archive.org/web/20200928103531im_/http://romhackers.org/uploads/smil470474167631b.gif)
 
