--- a/_noticias/2021-03-01-pobre-13-anos.md
+++ b/_noticias/2021-03-01-pobre-13-anos.md
@@ -20,7 +20,7 @@ Todos os textos do **Ninja Gaiden** foram traduzidos e acentuados, assim como as
 
 Segue o link para o download da tradução:
 
--   [Tradução versão 1.0 do jogo Ninja Gaiden (Nintendo 8-bit)](//romhackers.org/traducoes/console/nes/ninja-gaiden-nes-po.b.r.e./)
+-   [Tradução versão 1.0 do jogo Ninja Gaiden (Nintendo 8-bit)](//romhackers.org/traducoes/console/nes/ninja-gaiden-nes-po.b.r.e/)
 
 ![](//img.romhackers.org/traducoes/%5BNES%5D%20Ninja%20Gaiden%20II%20-%20POBRE%20-%201.png) ![](//img.romhackers.org/traducoes/%5BNES%5D%20Ninja%20Gaiden%20II%20-%20POBRE%20-%202.png)\
 *Ninja Gaiden II do sistema Nintendo 8-bit traduzido por Mr.Fox*
@@ -29,38 +29,40 @@ Todos os textos do **Ninja Gaiden II** também foram traduzidos e acentuados, as
 
 Segue o link para o download da tradução:
 
--   [Tradução versão 1.0 do jogo Ninja Gaiden II (Nintendo 8-bit)](//romhackers.org/traducoes/console/nes/ninja-gaiden-II-nes-po.b.r.e./)
+-   [Tradução versão 1.0 do jogo Ninja Gaiden II (Nintendo 8-bit)](//romhackers.org/traducoes/console/nes/ninja-gaiden-II-nes-po.b.r.e/)
 
-![](//img.romhackers.org/traducoes/%5BNES%5D%20Ninja%20Gaiden%20III%20-%20POBRE%20-%201.png) ![](//img.romhackers.org/traducoes/%5BNES%5D%20Ninja%20Gaiden%20III%20-%20POBRE%20-%201.png)\
+![](//img.romhackers.org/traducoes/%5BNES%5D%20Ninja%20Gaiden%20III%20-%20POBRE%20-%201.png) ![](//img.romhackers.org/traducoes/%5BNES%5D%20Ninja%20Gaiden%20III%20-%20POBRE%20-%202.png)\
 *Ninja Gaiden III do sistema Nintendo 8-bit traduzido por Mr.Fox*
 
 Assim como no **Ninja Gaiden I** e no **Ninja Gaiden II**, todos os textos do **Ninja Gaiden III** foram traduzidos a acentuados, bem como as mensagens em forma de gráfico. O pacote de tradução possui dois *patches*: um *patch* que simplesmente traduz o jogo para o idioma português e outro *patch* que, além de traduzir o jogo, ele também implementa as modificações do *hack* **Ninja Gaiden III - Restored**. O referido *hack* foi feito pelo romhacker* **MottZilla**, e ele restaura o sistema de danos da versão japonesa, além de implementar um sistema de *password* similar ao que existe também na versão japonesa do jogo.
 
 Segue o link para o download da tradução:
 
--   [Tradução versão 1.0 do jogo Ninja Gaiden III (Nintendo 8-bit)](//romhackers.org/traducoes/console/nes/ninja-gaiden-III-nes-po.b.r.e./)
+-   [Tradução versão 1.0 do jogo Ninja Gaiden III (Nintendo 8-bit)](//romhackers.org/traducoes/console/nes/ninja-gaiden-III-nes-po.b.r.e/)
 
 OBS: Em tempo, eu gostaria de deixar registrado o meu muito obrigado a **Arara**, que me ajudou bastante com várias dúvidas referentes a alguns termos e diálogos japoneses presentes nos 3 jogos supracitados.
 
 Continuando com os lançamentos, eu também traduzi a versão do jogo **Ninja Gaiden** para o sistema Game Gear. Absolutamente tudo do jogo foi traduzido, como vocês podem conferir abaixo:
 
-![](//img.romhackers.org/traducoes/%5BGG%5D%20Ninja%20Gaiden%20-%20POBRE%20-%201.png) ![](//img.romhackers.org/traducoes/%5BGG%5D%20Ninja%20Gaiden%20-%20POBRE%20-%202.png)\
+![](//img.romhackers.org/traducoes/%5BGG%5D%20Ninja%20Gaiden%20-%20POBRE%20-%201.png) ![](//img.romhackers.org/traducoes/%5BGG%5D%20Ninja%20Gaiden%20-%20POBRE%20-%203.png)\
 *Ninja Gaiden do sistema Game Gear traduzido por Mr.Fox*
 
 Segue o link para o download da tradução:
 
--   [Tradução versão 1.0 do jogo Ninja Gaiden (Game Gear)](//romhackers.org/traducoes/console/game-gear/ninja-gaiden-gg-po.b.r.e./)
+-   [Tradução versão 1.0 do jogo Ninja Gaiden (Game Gear)](//romhackers.org/traducoes/console/game-gear/ninja-gaiden-gg-po.b.r.e/)
 
 Por fim, eu gostaria de avisar que a minha tradução para o jogo **Ninja Gaiden** do sistema Master System foi atualizada. Nesta nova versão, o *menu* secreto de opções, que havia passado despercebido nas versões anteriores da tradução, foi finalmente traduzido, como vocês podem conferir abaixo.
 
 OBS: Tanto a tradução para a versão protótipo do jogo quanto a tradução para a versão final/comercial do jogo receberam esta atualização.
 
-![](//img.romhackers.org/traducoes/%5BSMS%5D%20Ninja%20Gaiden%20-%20POBRE%20-%201.png) ![](//img.romhackers.org/traducoes/%5BSMS%5D%20Ninja%20Gaiden%20-%20POBRE%20-%202.png)\
+![](//img.romhackers.org/traducoes/%5BSMS%5D%20Ninja%20Gaiden%20-%20POBRE%20-%201.png) ![](//img.romhackers.org/noticias/%5BSMS%5D%20Ninja%20Gaiden%20SMS%20-%20POBRE%20-%20Menu.png)\
 *Ninja Gaiden do sistema Master System traduzido por Mr.Fox*
 
 Seguem os links para o download das traduções:
 
 -   [Tradução versão 1.2 do jogo Ninja Gaiden - Versão Protótipo do Jogo (Master System)](//romhackers.org/traducoes/console/master-system/ninja-gaiden-versao-prototipo-do-jogo-po.b.r.e/)
 -   [Tradução versão 1.2 do jogo Ninja Gaiden - Versão Final do Jogo (Master System)](//romhackers.org/traducoes/console/master-system/ninja-gaiden-versao-final-do-jogo-po.b.r.e/)
+
+
 
 Então é isso, pessoal. A equipe **PO.B.R.E.** gostaria de agradecer a todos aqueles que nos acompanharam e colaboraram conosco ao longo desses 13 anos de estrada. Nós desejamos um ótimo divertimento a todos, e fiquem atentos às próximas novidades. ![](//img.romhackers.org/noticias/smile.gif)
